# nn-core

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
docs/: tajalliyat.md
scripts/: smoke_checkpoint.py  smoke_toy_lm.py  smoke_train_step.py
src/nncore/: __init__.py
src/nncore/blocks/: __init__.py  ofn.py  tajalliyat.py  transformer.py
src/nncore/cache/: __init__.py  kv_cache.py  step_cache.py
src/nncore/constraints/: __init__.py  base.py  null.py  registry.py
src/nncore/functional/: __init__.py  attention.py
src/nncore/hooks/: __init__.py  base.py  null.py
src/nncore/io/: __init__.py  checkpoint.py
src/nncore/layers/: __init__.py  attention.py  mlp.py  norm.py  norm_factory.py
src/nncore/models/: __init__.py  config.py  ofn.py  tajalliyat.py  transformer.py
src/nncore/moe/: __init__.py  experts.py  losses.py  moe_layer.py  router.py
src/nncore/positional/: __init__.py  rope.py
tests/: test_attention_backends.py  test_attention_forward.py  test_attention_mask_shapes.py  test_attention_wired_validation.py  test_checkpoint_roundtrip.py  test_constraints.py  test_exit_router.py  test_hooks.py  test_imports.py  test_kv_cache_equivalence.py  test_meters.py  test_model_config_roundtrip.py  test_moe_block.py  test_moe_model_forward.py  test_moe_shapes.py  test_norms.py  test_ofn_block.py  test_ofn_config.py  test_ofn_model.py  test_recurrence_engine.py  test_rope.py  test_step_cache.py  test_tajalliyat_block.py  test_tajalliyat_config.py  test_tajalliyat_model.py  test_toy_lm_smoke.py  test_training_step.py  test_transformer_forward.py
(+16 files in other folders)
