[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nn-core"
version = "0.1.0"
description = "Core neural architecture components for recursive, transformer, and Tajalli models."
authors = [
  { name="Zachary Klotz" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"

dependencies = [
  "torch>=2.1",
  "numpy>=1.24",
  "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "black",
  "isort",
  "mypy",
  "tensorboard"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"